--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Windias.github.io</h1>
-          <h2>这是Tagline</h2>
+          <h1>Hello World!</h1>
+          <h2>Nice to meet you</h2>
         </header>
 
         <section id="downloads" class="clearfix">
